examples/datalog/17_rule_commands/18_rule_with_relation_name.dl
% Test: Rule with same name as existing relation
% Expected: Clarify behavior when rule name matches relation
% Category: 17_rule_commands
% Priority: P2 - Rule management

.kg create test_rule_rel_name
.kg use test_rule_rel_name

% Create a relation
+data[(1, 10), (2, 20)].

% Create a rule with different name
+computed(X, Y) :- data(X, Z), Y = Z * 2.

?- computed(X, Y).

% Query the original relation
?- data(X, Y).

.kg use default
.kg drop test_rule_rel_name
